<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:textColor="@color/gray"
    tools:context="ch.philosoph.forsbergboard.BreakForSpeaker">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_random_per"
                android:textColor="@color/gray"
                android:textSize="@dimen/title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_random_per"
                android:textColor="@color/gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <ImageButton
                android:id="@+id/random_play_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:onClick="playRandomPerSounds"
                android:src="@drawable/ic_play_circle_outline_black_24dp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_replace_per"
                android:textColor="@color/light_black"
                android:textSize="@dimen/title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_replace_per"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white_gray_0"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/per_sounds"
                    android:labelFor="@+id/spinner_per_sound"
                    android:text="@string/select_per_sound" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white">

                    <Spinner
                        android:id="@+id/spinner_per_sound"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="0dp"></Spinner>
                </RelativeLayout>


                <EditText
                    android:id="@+id/text_to_speech"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edit_text_t2s"
                    android:inputType="text" />

                <Switch
                    android:id="@+id/t2s_after_per"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/switch_t2s"
                    android:textColor="@color/gray" />
            </LinearLayout>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:onClick="replaceSpeaker"
                android:src="@drawable/ic_play_circle_outline_black_24dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>